--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> [ Hexo ]</title>
+<title> [ Psoi ]</title>
 
   <link rel="icon" href="/img/favicon.ico">
 
