--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <div class="author-avatar-wrapper">
           <img
             class="author-avatar"
-            src="https://cdn.jsdelivr.net/gh/dewjohn/CDN@latest/images/avatar.webp"
+            src="https://cdn.jsdelivr.net/gh/ppsoi/picture@latest/my.webp"
             alt="avatar"
             loading="lazy"
           />
