--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="icon" href="/img/favicon.ico">
 
 
-    <meta name="author" content="John Doe">
+    <meta name="author" content="To Ann">
 
 
 
