--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             loading="lazy"
           />
       </div>
-      <h2 class="author-name">John Doe</h2>
+      <h2 class="author-name">To Ann</h2>
       <p class="author-bio">I just want something simpler...</p>
     </div>
     <main aria-label="Content">
